# dexe

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  README.md  adv.cc  adv.h  colour.h  database.cc  database.h  handler.h  layers.cc  layers.h  loss.cc  loss.h  main.cc  network.cc  network.h  operations.cc  operations.h  tensor.cc  tensor.h  tensor2d.cc  train.cc  util.h
cmake/: DEXEConfig.cmake.in  FindCUDNN.cmake  dexeConfig.cmake.in
ext/NIFTI/niftilib/: nifti1_io.h
inc/: adv.h  balancer.h  colour.h  config.h  cudaptr.h  cudavec.h  database.h  dexe.h  gate.h  handler.h  img.h  img.pb.h  img.proto  io.h  kernels.h  loss.h  net.proto  net.proto.todo  network.h  normalise.h  operations.h  optimizer.h  options.h  rand.h  sample.pb.h  sample.proto  sampledatabase.h  tensor.h  util.h
inc/dexe/: allocator.h  connet.h  cudavec.h  dexe.h  handler.h  img.h  io.h  kernels.h  loss.h  models.h  network.h  operations.h  optimizer.h  options.h  print.h  tensor.h  util.h
src/: adv.cc  allocator.cc  balancer.cc  caffe.pb.cc  cudavec.cu  database.cc  gate.cu  handler.cc  img.cc  img.pb.cc  io.cc  kernels.cu  loss.cc  models.cc  network.cc  normalise.cu  operations.cc  optimizer.cc  options.cc  rand.cc  sample.pb.cc  sampledatabase.cc  tensor.cc  util.cc  util.cu
txt/: ramblings.txt
